<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="?colorOnPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textColor="?colorOnSecondary"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:id="@+id/welcome"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account"
        android:textSize="@dimen/_10ssp"
        android:textColor="?colorOnSecondary"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        android:id="@+id/description"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="@dimen/_10sdp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_25sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textColor="?colorOnSecondary"
        android:textColorHint="?colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        android:id="@+id/loginEmail"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/password"
        android:drawablePadding="@dimen/_10sdp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_25sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textColor="?colorOnSecondary"
        android:textColorHint="?colorOnSecondary"
        app:layout_constraintEnd_toEndOf="@+id/loginEmail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/loginEmail"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail"
        android:id="@+id/loginPassword"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="Forgot Password?"
        android:textColor="?colorOnSecondary"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword"
        android:id="@+id/forgotPassword"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:text="@string/login"
        android:textSize="@dimen/_12ssp"
        app:cornerRadius="@dimen/_15sdp"
        android:shadowColor="@color/light_color"
        android:backgroundTint="?colorOnSecondary"
        app:layout_constraintEnd_toEndOf="@+id/loginPassword"
        app:layout_constraintStart_toStartOf="@+id/loginPassword"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
        android:id="@+id/btnLogin"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? "
            android:textColor="?colorOnSecondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="?colorOnSecondary"
            android:id="@+id/textRegister"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>